--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_core: ^3.1.1
   cloud_firestore: ^5.0.2
   crypto: ^3.0.3
+  provider: 
 
 dev_dependencies:
   flutter_test:
